--- a/meals.html
+++ b/meals.html
@@ -7,7 +7,6 @@
    <body>
       <div id="header">header</div>
       <div id="left_block" class="half_page"></div>
-
-      <div id="right_block"></div>
+      <div id="right_block" class="half_page"></div>
    </body>
 </html>
