--- a/schedule.html
+++ b/schedule.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title> New Meals You Could Get at ISD </title>
+      <title> Food Schedule </title>
       <link rel="stylesheet" type="text/css" href="stylesheet.css"></link>
    </head>
    <body>
-      <div id="header">header</div>
-      <div id="left_block" class="half_page"></div>
-
-      <div id="right_block"></div>
+      <div id="left_block" class="small_left_and_right"></div>
+      <div id="middle block" class="wide_middle"></div>
+      <div id="right_block" class="small_left_and_right"></div>
    </body>
 </html>
