Block and Navigation
I have changed the position of the blocks on the pages and changed
their colour. Additionally, I have added navigation links to the index
page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
    <head>
+     <input type="text" name="search" placeholder="Search..">
       <title>Healthy Eating at ISD</title>
       <link rel="stylesheet" type="text/css" href="stylesheet.css"></link>
    </head>
    <body>
-      <div id="header">header</div>
-      <div id="left block"></div>
-      <div id="middle block"></div>
-      <div id="right block"></div>
+      <div id="header"><p>header</p></div>
+      <div id="left_block"><a href='meals.html'> New Food Options </a></div>
+      <div id="middle_block"> <a href='schedule.html'> Food Schedule </a></div>
+      <div id="right_block"> <a href='information.html'> More Information About Healthy Eating </a></div>
    </body>
 </html>
