--- a/schedule.html
+++ b/schedule.html
@@ -6,7 +6,7 @@
    </head>
    <body>
       <div id="left_block" class="small_left_and_right"></div>
-      <div id="middle block" class="wide_middle"></div>
+      <div id="middle_block" class="wide_middle"></div>
       <div id="right_block" class="small_left_and_right"></div>
    </body>
 </html>
