Adding Images and Finalysing
I have added extra content and I have finalised the index page

--- a/meals.html
+++ b/meals.html
@@ -5,7 +5,7 @@
       <link rel="stylesheet" type="text/css" href="stylesheet.css"></link>
    </head>
    <body>
-      <div id="header">header</div>
+      <div id="header">New Meals You Could Get at ISD</div>
       <div id="left_block" class="half_page"></div>
       <div id="right_block" class="half_page"></div>
    </body>
