--- a/schedule.html
+++ b/schedule.html
@@ -5,6 +5,7 @@
       <link rel="stylesheet" type="text/css" href="stylesheet.css"></link>
    </head>
    <body>
+     <div id="header">Food Schedule</div>
       <div id="left_block" class="small_left_and_right"></div>
       <div id="middle_block" class="wide_middle"></div>
       <div id="right_block" class="small_left_and_right"></div>
