--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
       <link rel="stylesheet" type="text/css" href="stylesheet.css"></link>
    </head>
    <body>
-      <div id="header"><p style="font-size: 70px; font-family: PT Serif Caption; text-align:center"> <strong> Best Food at
-ISD </strong></p></div>
-      <div id="left_block"><a href='meals.html'> New Food Options </a> <img src="image.png"/></div>
-      <div id="middle_block"> <a href='schedule.html'> Food Schedule </a></div>
-      <div id="right_block"> <a href='information.html'> More Information About Healthy Eating </a></div>
+      <div id="header" <strong> Best Food at ISD </strong> <img src="img6.png"/></div>
+      <div id="left_block"><a href='meals.html'> New Food Options </a> <img src="img2.png"/></div>
+      <div id="middle_block"> <a href='schedule.html'> Food Schedule </a> <img src="image.png"/></div>
+      <div id="right_block"> <a href='information.html'> More Information About Healthy Eating </a> <img src="img3.png"/></div>
    </body>
 </html>
