--- a/information.html
+++ b/information.html
@@ -5,7 +5,7 @@
       <link rel="stylesheet" type="text/css" href="stylesheet.css"></link>
    </head>
    <body>
-      <div id="header">header</div>
+      <div id="header">More Information</div>
       <div id="left_block" class="half_page"></div>
       <div id="right_block" class="half_page"></div>
    </body>
