Last Few Changes
I have just done some small corrections

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
       <div id="header" <strong> Best Food at ISD </strong> <img src="img6.png"/></div>
       <div id="left_block"><a href='meals.html'> New Food Options </a> <img src="img2.png"/></div>
       <div id="middle_block"> <a href='schedule.html'> Food Schedule </a> <img src="image.png"/></div>
-      <div id="right_block"> <a href='information.html'> More Information About Healthy Eating </a> <img src="img3.png"/></div>
+      <div id="right_block"> <a href='information.html'> More Information</a> <img src="img3.png"/></div>
    </body>
 </html>
